--- a/julia_set.ipynb
+++ b/julia_set.ipynb
@@ -22,6 +22,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Establishing the coordinate lists as inputs to our calculation function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -62,6 +69,33 @@
     "    # It ensures that our code evolves exactly as we'd intended\n",
     "    assert sum(output) == 33219980\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our CPU-bound calculation function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_z_serial_purepython(maxiter, zs, cs):\n",
+    "    \"\"\"Calculate output list using Julia update rule\"\"\"\n",
+    "    output = [0] * len(zs)\n",
+    "    for i in range(len(zs)):\n",
+    "        n = 0\n",
+    "        z = zs[1]\n",
+    "        c = cs[i]\n",
+    "        while abs(z) < 2 and n < maxiter:\n",
+    "            z = z*z + c\n",
+    "            n += 1\n",
+    "        output[i] = n\n",
+    "    return output"
    ]
   },
   {
